cleaning unused modules

--- a/dockerfiles/Ruby2.1.3/Dockerfile
+++ b/dockerfiles/Ruby2.1.3/Dockerfile
@@ -4,9 +4,9 @@ RUN useradd -ms /bin/bash sanjayu
 COPY resources/* /home/sanjayu/
 RUN mkdir /home/sanjayu/workspace
 RUN chown -R sanjayu:sanjayu /home/sanjayu
-RUN git clone https://github.com/saneax/vimrc .vim && cd .vim && \
-  git submodule init && git submodule update && \
-  cd && ln -s .vim/.vimrc .vimrc
+RUN cd /home/sanjayu && git clone https://github.com/saneax/vimrc .vim \
+  && cd .vim && git submodule init && git submodule update && \
+  cd /home/sanjayu && ln -s .vim/.vimrc .vimrc
 RUN apt-get update && apt-get install -y vim
 
 USER sanjayu
